fixed viewport for index page on mobile and smaller devices

--- a/static/style.css
+++ b/static/style.css
@@ -211,63 +211,76 @@ pre {
 
 /* Mobile: Hide full menu by default, show [menu] button */
 @media screen and (max-width: 768px) {
-    .post-title {
-        display: inline;
-    }
+  .title-read-time {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .post-title h2 {
-        font-size: 1.2rem; /* Adjust as needed */
-    }
+  .post-title {
+    font-size: 1.2rem; /* Adjust as needed */
+  }
+    
+  .post-description {
+    font-size: 0.8rem;
+  }
 
-    .post-title p {
-        font-size: 0.9rem;
-        right: 20px;
-    }
+  .post-read-time {
+    display: none;
+  }
+  
+  .post-date {
+    font-size: 0.7rem;
+  }
 
-    .menu-toggle {
-        display: flex; /* Show the toggle button on mobile */
-        font-family: "Hack Nerd Font", monospace;
-        background: none;
-        border: 1px solid #b8bb26; /* White border like your menu items */
-        color: #b8bb26;
-        font-size: 20px; /* Same size as your icons */
-        padding: 5px 10px;
-        cursor: pointer;
-        white-space: nowrap; /* Prevent text from wrapping */
-        max-width: 100%; /* Prevent the button from exceeding screen width */
-        text-align: center; /* Center the text */
-        margin-left: auto;
-    }
+  .tag {
+    font-size: 0.6rem;
+  }
 
-    .menu-items {
-        display: none; /* Hide menu items by default on mobile */
-        flex-direction: column;
-        position: absolute;
-        top: 100px; /* Adjust as per your header height */
-        right: 10px;
-        background: #282828; /* Menu background */
-        border: 1px solid #444; /* Optional border */
-        padding: 5px;
-        z-index: 1000;
-    }
+  .menu-toggle {
+      display: flex; /* Show the toggle button on mobile */
+      font-family: "Hack Nerd Font", monospace;
+      background: none;
+      border: 1px solid #b8bb26; /* White border like your menu items */
+      color: #b8bb26;
+      font-size: 20px; /* Same size as your icons */
+      padding: 5px 10px;
+      cursor: pointer;
+      white-space: nowrap; /* Prevent text from wrapping */
+      max-width: 100%; /* Prevent the button from exceeding screen width */
+      text-align: center; /* Center the text */
+      margin-left: auto;
+  }
 
-    .menu-items.active {
-        display: flex; /* Show menu items when active */
-        text-align: left;  /* Ensure text is aligned left */
-    }
+  .menu-items {
+      display: none; /* Hide menu items by default on mobile */
+      flex-direction: column;
+      position: absolute;
+      top: 100px; /* Adjust as per your header height */
+      right: 10px;
+      background: #282828; /* Menu background */
+      border: 1px solid #444; /* Optional border */
+      padding: 5px;
+      z-index: 1000;
+  }
 
-    .menu-items li {
-        margin: 0px 0px; /* Adjust spacing for dropdown items */
-    }
+  .menu-items.active {
+      display: flex; /* Show menu items when active */
+      text-align: left;  /* Ensure text is aligned left */
+  }
 
-    .social {
-        list-style-type: none;
-        width: 30%;
-    }
+  .menu-items li {
+      margin: 0px 0px; /* Adjust spacing for dropdown items */
+  }
 
-    .social-img {
-        display: none;
-    }
+  .social {
+      list-style-type: none;
+      width: 30%;
+  }
+
+  .social-img {
+      display: none;
+  }
 }
 
 #scrollUp {
